# whoop-mcp-server

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PRIVACY.md  README.md  RELEASING.md  SECURITY.md  glama.json  pyproject.toml  pyrightconfig.json  server.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: PROMPTS.md
src/whoop_mcp/: __init__.py  __main__.py  analytics.py  cli.py  client.py  clients.py  config.py  demo.py  errors.py  export.py  oauth.py  server.py  summaries.py  timeutil.py  tokens.py  transform.py
tests/: conftest.py  test_analytics.py  test_client.py  test_clients.py  test_demo.py  test_server.py  test_summaries.py  test_timeutil.py  test_tokens.py  test_transform.py
