[project]
# whoop-mcp was taken on PyPI; the install name, command, and repo all use whoop-mcp-server.
name = "whoop-mcp-server"
version = "0.0.6"
description = "Ask Claude or ChatGPT about your WHOOP data. Recovery, sleep, strain, and workout analysis computed from your own records."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Rajdeep Mondal", email = "rajdeep@rajdeepmondal.com" }]
keywords = ["whoop", "mcp", "model-context-protocol", "health", "fitness", "claude", "chatgpt"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "mcp>=1.27,<2",
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/rajdeepmondaldotcom/whoop-mcp-server"
Issues = "https://github.com/rajdeepmondaldotcom/whoop-mcp-server/issues"

[project.scripts]
whoop-mcp-server = "whoop_mcp.cli:main"
# Shorter alias; existing client configs reference it.
whoop-mcp = "whoop_mcp.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "anyio>=4",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/whoop_mcp"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
